# snmp-collection

./: Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml  entrypoint.sh
alpine/: Dockerfile
config/: default.toml  dev.toml  production.toml
debian/: Dockerfile
src/: README.md  logger.rs  main.rs  schema.sql  settings.rs
src/dc/: db.rs  mod.rs  udpserver.rs
